# Helix-Telebot

./: .gitignore  LICENSE  README.md  bot_handlers.py  config.py  firebase_manager.py  main.py  pyproject.toml  replit.md  sheets_manager.py  update_routing_googlesheets.py  upload_users_to_firebase.py  user_manager.py  utils.py
functions/: index.js
