[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "firebase-admin>=7.0.0",
    "google-auth>=2.40.3",
    "gspread>=6.2.1",
    "pandas>=2.3.3",
    "pytelegrambotapi>=4.27.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
]
